--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,8 @@
                 android:layout_marginStart="@dimen/spacing_normal_16"
                 android:layout_marginEnd="@dimen/spacing_normal_16"
                 android:imeOptions="actionDone"
-                android:inputType="text"/>
+                android:inputType="text"
+        />
         <ImageView
                 android:id="@+id/iv_send"
                 android:layout_width="@dimen/spacing_large_24"
