--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,6 +7,10 @@
         <attr name="civBorderColor" format="color"/>
         <attr name="civBorderWidth" format="dimension"/>
     </declare-styleable>
+    <declare-styleable name="AvatarImageView">
+        <attr name="aivBorderColor" format="color"/>
+        <attr name="aivBorderWidth" format="dimension"/>
+    </declare-styleable>
     <attr name="colorAccentedSurface" format="reference"/>
     <attr name="colorDivider" format="reference"/>
     <attr name="colorIcon" format="reference"/>
