hometask_5 Night UI

--- a/app/src/main/res/layout/item_chat_single.xml
+++ b/app/src/main/res/layout/item_chat_single.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/item_size"
                 android:padding="@dimen/spacing_normal_16"
-                android:background="@android:color/white">
+                android:background="?attr/colorItemView">
 
     <ru.skillbranch.devintensive.ui.custom.AvatarImageView
             android:id="@+id/iv_avatar_single"
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="chat title"
-            android:textColor="@color/color_primary"
+            android:textColor="?attr/colorTitle"
             android:fontFamily="sans-serif-medium"
             android:textSize="14sp"
             android:layout_toRightOf="@id/iv_avatar_single"
@@ -35,14 +35,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Когда я проходил интенсив, я мало спал"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorText"
             android:textSize="14sp"
             android:layout_toRightOf="@id/iv_avatar_single"
             android:layout_toLeftOf="@id/tv_counter_single"
             android:layout_marginLeft="@dimen/spacing_normal_16"
             android:layout_marginRight="@dimen/spacing_normal_16"
             android:layout_below="@id/tv_title_single"/>
-
     <TextView
             android:id="@+id/tv_date_single"
             android:layout_width="wrap_content"
@@ -50,7 +49,7 @@
             android:textSize="10sp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorText"
             tools:text="18:00"/>
     <TextView
             android:id="@+id/tv_counter_single"
