--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -3,7 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent" android:layout_height="@dimen/item_size"
                 android:padding="@dimen/spacing_normal_16"
-                android:background="@android:color/white">
+                android:background="?attr/colorItemView">
     <ImageView
             android:id="@+id/iv_selected"
             android:layout_width="@dimen/icon_size"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             tools:text="user name"
             android:textSize="14sp"
-            android:textColor="@color/color_primary"
+            android:textColor="?attr/colorTitle"
             android:fontFamily="sans-serif-medium"
             android:layout_toRightOf="@+id/iv_avatar_user"
             android:layout_marginLeft="@dimen/spacing_normal_16"/>
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             tools:text="online"
             android:textSize="14sp"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorText"
             android:layout_below="@id/tv_user_name"
             android:layout_toRightOf="@+id/iv_avatar_user"
             android:layout_marginLeft="@dimen/spacing_normal_16"/>
