--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,5 +14,16 @@
     <attr name="colorAccentedSurface" format="reference"/>
     <attr name="colorDivider" format="reference"/>
     <attr name="colorIcon" format="reference"/>
-
+    <!--Night UI-->
+    <attr name="colorToolbar" format="reference"/>
+    <attr name="colorBackground" format="reference"/>
+    <attr name="colorItemView" format="reference"/>
+    <attr name="colorCounter" format="reference"/>
+    <attr name="colorSelected" format="reference"/>
+    <attr name="colorSnackbar" format="reference"/>
+    <attr name="colorChipCloseIconTint" format="reference"/>
+    <attr name="colorChipBackground" format="reference"/>
+    <attr name="colorText" format="reference"/>
+    <attr name="colorTitle" format="reference"/>
+    <attr name="colorSnackbarText" format="reference"/>
 </resources>
