--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,8 @@
     <color name="color_divider_light">#1FFFFFFF</color>
     <color name="color_indicator">#581F99</color>
     <color name="color_green">#4FD149</color>
+    <!--Night UI-->
+    <color name="color_mine_shaft">#272727</color>
+    <color name="color_cod_gray">#121212</color>
+    <color name="color_nero">#1D1D1D</color>
 </resources>
