--- a/app/src/main/res/layout/activity_archive.xml
+++ b/app/src/main/res/layout/activity_archive.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.archive.ArchiveActivity">
+        tools:context=".ui.archive.ArchiveActivity"
+        android:background="?attr/colorItemView">
     <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -14,7 +15,8 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
+                app:popupTheme="@style/AppTheme.PopupOverlay"
+                android:background="?attr/colorToolbar">
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
     <LinearLayout
@@ -26,7 +28,8 @@
                 android:id="@+id/rv_archive_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/item_chat_single">
+                tools:listitem="@layout/item_chat_single"
+                android:background="?attr/colorItemView">
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
