--- a/app/src/main/res/layout/item_chat_archive.xml
+++ b/app/src/main/res/layout/item_chat_archive.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/item_size"
                 android:padding="@dimen/spacing_normal_16"
-                android:background="@android:color/white">
+                android:background="?attr/colorItemView">
 
     <ru.skillbranch.devintensive.ui.custom.AvatarImageView
             android:id="@+id/iv_avatar_archive"
@@ -18,7 +18,7 @@
             android:id="@+id/tv_title_archive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_primary"
+            android:textColor="?attr/colorTitle"
             android:fontFamily="sans-serif-medium"
             android:textSize="14sp"
             android:layout_toRightOf="@id/iv_avatar_archive"
@@ -31,26 +31,24 @@
             android:layout_height="wrap_content"
             tools:text="\@Name"
             android:textStyle="bold"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorTitle"
             android:textSize="14sp"
             android:layout_toRightOf="@id/iv_avatar_archive"
             android:layout_marginLeft="@dimen/spacing_normal_16"
             android:layout_marginRight="@dimen/spacing_tiny_4"
             android:layout_below="@id/tv_title_archive"/>
-
     <TextView
             android:id="@+id/tv_message_archive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Когда я проходил интенсив, я мало спал"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorText"
             android:textSize="14sp"
             android:layout_toRightOf="@id/tv_message_author_archive"
             android:layout_toLeftOf="@id/tv_counter_archive"
             android:layout_marginLeft="@dimen/spacing_tiny_4"
             android:layout_marginRight="@dimen/spacing_normal_16"
             android:layout_below="@id/tv_title_archive"/>
-
     <TextView
             android:id="@+id/tv_date_archive"
             android:layout_width="wrap_content"
@@ -58,7 +56,7 @@
             android:textSize="10sp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/color_gray_dark"
+            android:textColor="?attr/colorText"
             tools:text="18:00"/>
     <TextView
             android:id="@+id/tv_counter_archive"
